[project]
name = "lighting console"
description = "A raspberry Pi based lighiting console"
version = "0.1.0"
authors = [
    { name = "Thomas Crundwell", email = "" }
]
dependencies = [
    "pyartnet",
    "sklearn"
]

[project.optional-dependencies]
dev = []

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]